# Israel-Price-Transparency

./: .gitignore  Cargo.toml  tableLinks.md
analysis/: Cargo.toml
analysis/src/: main.rs
src/: lib.rs  main.rs
src/parsed_sites/: mod.rs
src/structs/: maayan_2000.rs  mod.rs
src/util/: create_directory.rs  create_json_file.rs  get_req_maayan_2000.rs  mod.rs  parse_compress_files.rs  parse_html_maayan_2000.rs  save_json.rs  setup_browser.rs
